# Tranquility

./: BinaryPartitionStrategy.cpp  BinaryPartitionStrategy.h  CMakeLists.txt  GameManager.cpp  GameManager.h  Winnability.cpp  main.cpp
